refaktoring rc3
